objects/Payment_Method__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Payment methods specified in a promise to pay and associated rules/mappings</description>
    <fields>
        <fullName>Promise_Days__c</fullName>
        <label>Promise Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Controls the sort order for the setting&apos;s records</description>
        <label>Sort Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
</CustomObject>